# trading-analytics

./: .gitignore  README.md  analyze_trend.py  get-data.py  get_data.py  pyproject.toml  trader.py
agents/: market_analysis_agent.py  trading_agent.py  trend_analysis_agent.py
configs/: trade.yaml
envs/: test-env.env
indicators/: indicator.py
trading_env/: trading_environment.py
