[project]
name = "trading-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "matplotlib>=3.10.0",
    "mplfinance>=0.12.10b0",
    "pandas>=2.2.3",
    "python-binance>=1.0.27",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
]
